permutations start for each value in number

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "108"
+       "987"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 25, 50, 75, 100]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 9, 10, 6, 8, 5]"
+       "[10, 3, 8, 7, 3, 1]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,8 @@
     "        num_pool.remove(num_pool[random_index])                     # Remove the number from the pool\n",
     "    return chosen_numbers\n",
     "\n",
-    "get_numbers(numbers_pool)"
+    "numbers = get_numbers(numbers_pool)\n",
+    "numbers"
    ]
   },
   {
@@ -121,6 +122,166 @@
    "metadata": {},
    "source": [
     "# Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "7\n",
+      "30\n",
+      "18\n",
+      "2\n",
+      "80\n",
+      "17\n",
+      "3\n",
+      "70\n",
+      "13\n",
+      "7\n",
+      "30\n",
+      "11\n",
+      "9\n",
+      "10\n",
+      "10.0\n",
+      "13\n",
+      "-7\n",
+      "30\n",
+      "11\n",
+      "-5\n",
+      "24\n",
+      "10\n",
+      "-4\n",
+      "21\n",
+      "6\n",
+      "0\n",
+      "9\n",
+      "1.0\n",
+      "4\n",
+      "2\n",
+      "3\n",
+      "3.0\n",
+      "18\n",
+      "-2\n",
+      "80\n",
+      "11\n",
+      "5\n",
+      "24\n",
+      "15\n",
+      "1\n",
+      "56\n",
+      "11\n",
+      "5\n",
+      "24\n",
+      "9\n",
+      "7\n",
+      "8\n",
+      "8.0\n",
+      "17\n",
+      "-3\n",
+      "70\n",
+      "10\n",
+      "4\n",
+      "21\n",
+      "15\n",
+      "-1\n",
+      "56\n",
+      "10\n",
+      "4\n",
+      "21\n",
+      "8\n",
+      "6\n",
+      "7\n",
+      "7.0\n",
+      "13\n",
+      "-7\n",
+      "30\n",
+      "6\n",
+      "0\n",
+      "9\n",
+      "1.0\n",
+      "11\n",
+      "-5\n",
+      "24\n",
+      "10\n",
+      "-4\n",
+      "21\n",
+      "4\n",
+      "2\n",
+      "3\n",
+      "3.0\n",
+      "11\n",
+      "-9\n",
+      "10\n",
+      "4\n",
+      "-2\n",
+      "3\n",
+      "9\n",
+      "-7\n",
+      "8\n",
+      "8\n",
+      "-6\n",
+      "7\n",
+      "4\n",
+      "-2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import permutations \n",
+    "\n",
+    "# Get permutations from values\n",
+    "list_of_permutations = list(permutations(numbers, 2))\n",
+    "\n",
+    "# Iterate through each set\n",
+    "for the_set in list_of_permutations:\n",
+    "    print(the_set[0] + the_set[1])\n",
+    "    print(the_set[0] - the_set[1])\n",
+    "    print(the_set[0] * the_set[1])\n",
+    "    \n",
+    "    # Print the division, if there's no remainder\n",
+    "    division = the_set[0] / the_set[1]\n",
+    "    if (the_set[0] % the_set[1] == 0):\n",
+    "        print(division)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solve_numbers(num_array, target):\n",
+    "\n",
+    "    return 0\n",
+    "\n",
+    "solve_numbers(numbers, target)"
    ]
   },
   {
