algorithm done in a way

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "987"
+       "980"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 25, 50, 75, 100]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 3, 8, 7, 3, 1]"
+       "[6, 50, 25, 10, 2, 6]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,134 +135,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n",
-      "7\n",
-      "30\n",
-      "18\n",
-      "2\n",
-      "80\n",
-      "17\n",
-      "3\n",
-      "70\n",
-      "13\n",
-      "7\n",
-      "30\n",
-      "11\n",
-      "9\n",
-      "10\n",
-      "10.0\n",
-      "13\n",
-      "-7\n",
-      "30\n",
-      "11\n",
-      "-5\n",
-      "24\n",
-      "10\n",
-      "-4\n",
-      "21\n",
-      "6\n",
-      "0\n",
-      "9\n",
-      "1.0\n",
-      "4\n",
-      "2\n",
-      "3\n",
-      "3.0\n",
-      "18\n",
-      "-2\n",
-      "80\n",
-      "11\n",
-      "5\n",
-      "24\n",
-      "15\n",
-      "1\n",
-      "56\n",
-      "11\n",
-      "5\n",
-      "24\n",
-      "9\n",
-      "7\n",
-      "8\n",
-      "8.0\n",
-      "17\n",
-      "-3\n",
-      "70\n",
-      "10\n",
-      "4\n",
-      "21\n",
-      "15\n",
-      "-1\n",
-      "56\n",
-      "10\n",
-      "4\n",
-      "21\n",
-      "8\n",
-      "6\n",
-      "7\n",
-      "7.0\n",
-      "13\n",
-      "-7\n",
-      "30\n",
-      "6\n",
-      "0\n",
-      "9\n",
-      "1.0\n",
-      "11\n",
-      "-5\n",
-      "24\n",
-      "10\n",
-      "-4\n",
-      "21\n",
-      "4\n",
-      "2\n",
-      "3\n",
-      "3.0\n",
-      "11\n",
-      "-9\n",
-      "10\n",
-      "4\n",
-      "-2\n",
-      "3\n",
-      "9\n",
-      "-7\n",
-      "8\n",
-      "8\n",
-      "-6\n",
-      "7\n",
-      "4\n",
-      "-2\n",
-      "3\n"
+      "pog\n",
+      "pog\n",
+      "pog\n",
+      "pog\n"
      ]
     }
    ],
    "source": [
-    "from itertools import permutations \n",
+    "from itertools import permutations\n",
+    "import operator # from https://www.ttested.com/polish-countdown/\n",
+    "\n",
+    "# Operations - from https://www.ttested.com/polish-countdown/\n",
+    "operators = [operator.add, operator.sub, operator.mul, operator.floordiv]\n",
+    "\n",
     "\n",
     "# Get permutations from values\n",
     "list_of_permutations = list(permutations(numbers, 2))\n",
     "\n",
+    "# Make operation for each four results\n",
+    "def one_operation(arr_res, num):\n",
+    "    arr_result = []\n",
+    "    \n",
+    "    for op in operators:\n",
+    "        for num_in_array in arr_res:\n",
+    "            if op == operator.floordiv:\n",
+    "                if num_in_array % num == 0: # only append if no remainder\n",
+    "                    arr_result.append(op(num_in_array, num)) \n",
+    "            else:\n",
+    "                arr_result.append(op(num_in_array, num))\n",
+    "\n",
+    "    return arr_result\n",
+    "\n",
     "# Iterate through each set\n",
     "for the_set in list_of_permutations:\n",
-    "    print(the_set[0] + the_set[1])\n",
-    "    print(the_set[0] - the_set[1])\n",
-    "    print(the_set[0] * the_set[1])\n",
+    "    #print(\"NEW ONE\")\n",
+    "    temp_array = numbers.copy()\n",
+    "\n",
+    "    results = []\n",
+    "    final_results = []\n",
+    "    results.append(the_set[0] + the_set[1])\n",
+    "    results.append(the_set[0] - the_set[1])\n",
+    "    results.append(the_set[0] * the_set[1])\n",
     "    \n",
-    "    # Print the division, if there's no remainder\n",
-    "    division = the_set[0] / the_set[1]\n",
-    "    if (the_set[0] % the_set[1] == 0):\n",
-    "        print(division)"
+    "    if the_set[0] % the_set[1] == 0: # only append if no remainder\n",
+    "        results.append(the_set[0] / the_set[1])\n",
+    "\n",
+    "    #print(results)\n",
+    "\n",
+    "    # Remove the numbers\n",
+    "    temp_array.remove(the_set[0])\n",
+    "    temp_array.remove(the_set[1])\n",
+    "\n",
+    "    #print(\"NUM 2 OPERATION\")\n",
+    "    for num2 in temp_array:\n",
+    "        results2 = one_operation(results, num2)\n",
+    "        #print(results2)\n",
+    "        temp_array2 = temp_array.copy()\n",
+    "        temp_array2.remove(num2)\n",
+    "        #print(temp_array2)\n",
+    "\n",
+    "        #print(\"NUM 3 OPERATION\")\n",
+    "        for num3 in temp_array2:\n",
+    "            results3 = one_operation(results2, num3)\n",
+    "            #print(results3)\n",
+    "            temp_array3 = temp_array2.copy()\n",
+    "            temp_array3.remove(num3)\n",
+    "\n",
+    "            #print(\"NUM 4 OPERATION\")\n",
+    "            for num4 in temp_array3:\n",
+    "                results4 = one_operation(results3, num4)\n",
+    "                #print(results4)\n",
+    "                temp_array4 = temp_array3.copy()\n",
+    "                temp_array4.remove(num4)\n",
+    "\n",
+    "                #print(\"NUM 5 OPERATION - LAST ONE\")\n",
+    "                for num5 in temp_array4:\n",
+    "                    final_results = one_operation(results4, num5)\n",
+    "    \n",
+    "    for result in final_results:\n",
+    "        if (result == target):\n",
+    "            print(\"GET!\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
