--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -348,6 +348,7 @@
     "\n",
     "        res = print_solution_helper(res, the_number, the_operator)\n",
     "        \n",
+    "        # If gives remainder, return -1 and break the computation\n",
     "        if (the_operator == \"/\") and (res % the_number > 0):\n",
     "            return -1\n",
     "    \n",
