--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -121,6 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Algorithm"
    ]
   },
@@ -280,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 3: Stack Operations\n",
+    "# Step 3: Queue and Stack Operations\n",
     "For each permutation, this acts as a queue, for each element to be pushed into a stack. A stack, in this case, consists of at most two numbers, and will be evaluated once an operator is pushed into the stack."
    ]
   },
@@ -371,7 +372,7 @@
    "source": [
     "Finally, the `solve_numbers()` function is declared, consisting of all the functionalities above:\n",
     "* First, all the possible permutations are declared\n",
-    "* For each permutation, get all the combinations with all operators.\n",
+    "* For each permutation, get all the combinations with all operators. (with repetition)\n",
     "    * For each combination, evaluate them via reverse polish notation.\n",
     "        * If the combination produces a target number, return the solution, indicating that a solution is found.\n",
     "        * If the combination doesn't produce a target number, continue.\n",
@@ -429,6 +430,71 @@
    "metadata": {},
    "source": [
     "---\n",
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time complexity\n",
+    "Time complexity concerns the amount of times a statement executes. This is often concerns the \"loops\" in the program, as each simple loop corresponds to a $ N $ in time complexity. A nested loop (loop inside the loop) is $ N \\times N $ or $ N^2 $. The time complexity does not corresponds to the actual time required to execute, but a measure of efficiency of how the program runs. \n",
+    "\n",
+    "A tool used to describe this complexity is the **big O notation**, e.g. $ O(N) $ for linear time complexity (as it runs through a loop once)\n",
+    "\n",
+    "In the case of this particular countdown numbers game solution, the time complexity can be worse due to the amount of permutations that have to be generated and evaluated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step-by-step analysis\n",
+    "The first step of this program is to **generate all the permutations** for the numbers pool. This in itself has the time complexity of $ O(N!) $ where $ N $ is the number of numbers in the numbers pool."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second step of this program is to **generate combinations of operators with replacements** to allow evaluation of each permutation. The time complexity will then be $ O(N^x) $ where $ x $ is the amount of spaces for a combination. In this case there are five spaces of where operators can be placed, which means that the final time complexity is $ O(N^5) $. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The third step of this program is to **evaluate each permutation** using a queue (for the permutation) and a stack (for evaluation). While the operations of dequeuing and evaluating is in constant time of $ O(1) $, but to run through a permutation, it will require a loop. This can mean that the time complexity is $ O(N) $, where N is the number of elements in the permutation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When combined all parts together, the sum of all time complexity in a worst case scenario is $ O(N! + N^5 + N) $, which can then be deduced to $ N^5 $ as it is overshadows the two notations, those being $ N! $ and $ N $. This is shown in the figure below, where $ N^5 $ has the most growth rate out of any other two notations.\n",
+    "\n",
+    "![Figure 1: Different time complexity from the program, using Desmos.](images/ct-time_complexity_graph.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, this program's time complexity is deduced to $ O(N^5) $, which can be very ineffective with the brute-force approach of this solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Space Complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "End"
    ]
   }
@@ -449,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
