--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -487,7 +487,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Space Complexity"
+    "## Space Complexity\n",
+    "Space complexity concerns the amount of memory needed to run a function. This can be determined by the amount of variables, arrays and dimension of arrays that exist within the function itself.\n",
+    "\n",
+    "For example, if there exists an array variable used inside of a function, the Big-O notation of the function in terms of space complexity is $ O(N) $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step-by-Step Analysis\n",
+    "The first step of **generating all permutations** has a space complexity of $ O(N! \\times N) $. This is due to the step being dependent on the array size that is passed as the input, giving the space complexity of $ O(N) $ The `permutations()` function also uses the space complexity of $ O(N!) $ to generate each permutation of the given input."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second step of **adding operators** has a space complexity of $ O(N^2) $ for each permutation. This is due to the step generating a 2D array of 1,024 permutations from just one permutation from the previous step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The third step of **evaluating a permutation** has a space complexity of $ O(N) $. This is because of the step going through an array to generate a result from the permuation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combining all the steps together, the space complexity would be $ O(N! \\times N + N^2 + N) $. When simplified, this can be equal to $ O(N! \\times N) $, meaning that depending on the amount of numbers in the numbers pool, the additional space required to execute the function would be $ O(N! \\times N) $."
    ]
   },
   {
@@ -515,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
