more explanation on what countdown is and re-formatted the numbers round explanation a bit, to be based on the flow of the programme - numbers pool first, then target

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -16,9 +16,76 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "*Countdown* is a television programme in Channel 4. It is based on a French version of the programme *Des chiffres et das lettres* (translated to Numbers and letters) and has been running since November 2, 1982, when the channel is launched.\n",
+    "*Countdown* is a television programme in Channel 4. It is based on a French version of the programme *Des chiffres et das lettres* (translated to Numbers and letters) and has been running since November 2, 1982, when the channel is launched. \n",
     "\n",
-    "One of the rounds that are played in the programme is the **Numbers round**, where contestants are given 6 random numbers and have to use them to try and reach a randomly-generated target. (from 101-999, inclusive)"
+    "In the U.K. version, two contestants compete against each other to earn as many points as they can. The contestant with the most amount of points win. There are three different types of games that are played in the programme:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Letters Round - where players try to get the longest word out of the nine letters they chose randomly. The player with the longest word wins points, corresponding to their longest word. If it's a tie, they both score points. If a contestant uses all nine letters and produces a valid word, they earn 18 points.\n",
+    "* Numbers Round - where players are given 6 random numbers, and have to use them to reach a randomly-generated target. The player who has the closest calculated number near the target will win points based on the distance from the target:\n",
+    "    - 10 = exactly on the target\n",
+    "    - 7 = between 1-5 from the target\n",
+    "    - 5 = between 6-10 from the target\n",
+    "* Conundrum - where players guess a combination of words from the scrambled words given.\n",
+    "\n",
+    "All of these are done within 30 seconds. There are a total of 10 letters rounds, 4 number rounds and 1 final conundrum round played in each episode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Numbers Round\n",
+    "In one of the rounds, the **numbers round**, a contestant in control of the round will randomly pick 6 random numbers from the pile in front of a presenter. \n",
+    "\n",
+    "The 6 random numbers are selected by the contestants from a pool of small and large numbers. Contestants can choose from 2 sets of small numbers (1-10) and a set of large numbers. (25, 50, 75, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declaring the pool of numbers that can be selected\n",
+    "small_numbers = [number for number in range(1, 11)]     # 1, 2, 3, 4, 5, 6, 7, 8, 9, 10\n",
+    "big_numbers = [number * 25 for number in range(1, 5)]   # 25, 50, 75, 100 (multiples of 4)\n",
+    "\n",
+    "numbers_pool = small_numbers + small_numbers + big_numbers\n",
+    "numbers_pool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating 6 random numbers from the pool\n",
+    "import math, random\n",
+    "\n",
+    "def get_numbers(pool):\n",
+    "    num_pool = pool.copy()\n",
+    "    chosen_numbers = []\n",
+    "    for i in range(1, 7):\n",
+    "        random_index = math.floor(random.random() * len(num_pool))  # Get the index of random number to be chosen\n",
+    "        chosen_numbers.append(num_pool[random_index])               # Append that number to the list\n",
+    "        num_pool.remove(num_pool[random_index])                     # Remove the number from the pool\n",
+    "    return chosen_numbers\n",
+    "\n",
+    "numbers = get_numbers(numbers_pool)\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After which, a target is generated. The target is between 101 - 999 inclusive."
    ]
   },
   {
@@ -49,72 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 6 random numbers are selected by the contestants from a pool of small and large numbers. Contestants can choose from 2 sets of small numbers (1-10) and a set of large numbers. (25, 50, 75, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 25, 50, 75, 100]"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Declaring the pool of numbers that can be selected\n",
-    "small_numbers = [number for number in range(1, 11)]     # 1, 2, 3, 4, 5, 6, 7, 8, 9, 10\n",
-    "big_numbers = [number * 25 for number in range(1, 5)]   # 25, 50, 75, 100 (multiples of 4)\n",
+    "With those numbers, contestants would be given 30 seconds to use those numbers and try to reach the target. They are only allowed to use basic mathematical operations (addition, subtraction, multiplication, and division) and no fractions are allowed in the case of divisions.\n",
     "\n",
-    "numbers_pool = small_numbers + small_numbers + big_numbers\n",
-    "numbers_pool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 9, 4, 5, 8, 7]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Generating 6 random numbers from the pool\n",
-    "import math, random\n",
-    "\n",
-    "def get_numbers(pool):\n",
-    "    num_pool = pool.copy()\n",
-    "    chosen_numbers = []\n",
-    "    for i in range(1, 7):\n",
-    "        random_index = math.floor(random.random() * len(num_pool))  # Get the index of random number to be chosen\n",
-    "        chosen_numbers.append(num_pool[random_index])               # Append that number to the list\n",
-    "        num_pool.remove(num_pool[random_index])                     # Remove the number from the pool\n",
-    "    return chosen_numbers\n",
-    "\n",
-    "numbers = get_numbers(numbers_pool)\n",
-    "numbers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With those numbers, contestants would be given 30 seconds to use those numbers and try to reach the target. They are only allowed to use basic mathematical operations (addition, subtraction, multiplication, and division) and no fractions are allowed in the case of divisions."
+    "Each number from the numbers pool can also be used **once.**"
    ]
   },
   {
@@ -123,6 +127,13 @@
    "source": [
     "---\n",
     "# Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the countdown numbers game in mind, these are the following steps to approach this problem in Python, to create a `solve_numbers()` function, to help with finding solutions for the game."
    ]
   },
   {
@@ -547,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
