added brief note about functional concepts

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -381,6 +381,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the above, the `print_solution()` and the `print_solution_helper()` functions are declared to help with printing out the solution from the `solve_numbers()` function below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, the `solve_numbers()` function is declared, consisting of all the functionalities above:\n",
     "* First, all the possible permutations are declared\n",
     "* For each permutation, get all the combinations with all operators. (with repetition)\n",
@@ -434,6 +441,24 @@
     "    return\n",
     "\n",
     "solve_numbers(numbers, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each of the steps are dedicated to one or more functions, to help separate functionalities without compacting them to just one function. The workflow of the main `solve_numbers()` is as follows:\n",
+    "* `get_permutations()` (step 1)\n",
+    "* For each permutation:\n",
+    "    * `add_operators(perm)` (step 2)\n",
+    "        * `add_an_operator()`\n",
+    "    * `operate(perms_from_step_2)` (step 3)\n",
+    "        * `operate_helper()`\n",
+    "        * If target:\n",
+    "            * `print_solution()`\n",
+    "                * `print_solution_helper()`\n",
+    "        * If no target, continue.\n",
+    "* If no solutions, return \"no solutions\""
    ]
   },
   {
